kubernetes-manifests/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"catalog-postgresql"}]'
  labels:
    app: catalog-coolstore
    app.openshift.io/runtime: spring-boot
  name: catalog-coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-coolstore
  strategy: {}
  template:
    metadata:
      labels:
        app: catalog-coolstore
    spec:
      containers:
      - image: quay.io/mostmark/catalog-coolstore:latest
        name: catalog-coolstore
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
