kubernetes-manifests/catalog-postgresql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-postgresql
  labels:
    app.openshift.io/runtime: postgresql
    app: catalog-postgresql
spec:
  volumes:
    - name: catalog-postgresql-data
      emptyDir: {}
  replicas: 1
  selector:
    matchLabels:
      app: catalog-postgresql
  strategy: {}
  template:
    metadata:
      labels:
        app: catalog-postgresql
    spec:
      containers:
      - image: registry.redhat.io/rhel8/postgresql-10:1-232
        name: postgresql
        imagePullPolicy: IfNotPresent
        resources:
            limits:
              memory: 512Mi
        terminationMessagePolicy: File
        terminationMessagePath: /dev/termination-log
        readinessProbe:
          exec:
            command:
              - /usr/libexec/check-container
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3       
        livenessProbe:
          exec:
            command:
              - /usr/libexec/check-container
              - '--live'
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        securityContext:
            capabilities: {}
            privileged: false
        ports:
          - containerPort: 5432
            protocol: TCP
