kubernetes-manifests/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"inventory-mariadb"}]'
  labels:
    app: inventory-coolstore
    app.openshift.io/runtime: quarkus
  name: inventory-coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-coolstore
  strategy: {}
  template:
    metadata:
      labels:
        app: inventory-coolstore
    spec:
      containers:
      - image: quay.io/mostmark/inventory-coolstore:latest
        name: inventory-coolstore
