kubernetes-manifests/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-coolstore
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: catalog-coolstore
