kubernetes-manifests/inventory-mariadb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: inventory-mariadb
  labels:
    app.openshift.io/runtime: mariadb
spec:
  ports:
    - name: mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: inventory-mariadb
