kubernetes-manifests/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-coolstore
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: inventory-coolstore
