kubernetes-manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-coolstore
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: web-coolstore
