kubernetes-manifests/catalog-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: catalog-coolstore
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: catalog-coolstore
