kubernetes-manifests/inventory-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory-coolstore
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: inventory-coolstore
