kubernetes-manifests/web-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-coolstore
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: web-coolstore
